# pr-dashboard

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES.md  pyproject.toml
docs/: design-identity-change.md
extensions/: open-worktree.ps1
src/pr_dashboard/: __init__.py  ado_client.py  app.py  cli.py  cli_sources.py  config.py  data.py  db.py  formatting.py  gh_client.py  logger.py  pr_source.py  screens.py
tests/: conftest.py  test_auto_sync.py  test_config.py  test_data.py  test_formatting.py
