[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pr-dashboard"
version = "0.1.0"
description = "Interactive TUI + CLI for Azure DevOps & GitHub pull request management"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Yosi Hezi" },
]
dependencies = [
    "textual>=1.0",
    "httpx>=0.27",
    "azure-identity>=1.15",
    "platformdirs>=4.0",
    "rich>=13.0",
]

[project.scripts]
pr-dashboard = "pr_dashboard.cli:main"

[project.urls]
Repository = "https://github.com/Yosi-Hezi/pr-dashboard"

[tool.hatch.build.targets.wheel]
packages = ["src/pr_dashboard"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
